kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dotnet-memory-leak-app
  namespace: dotnet-memory-leak-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dotnet-memory-leak-app
  template:
    metadata:
      labels:
        app: dotnet-memory-leak-app
    spec:
      shareProcessNamespace: true
      serviceAccountName: dotnet-app-sa
      # Removed top-level securityContext here as it might conflict with SCCs for runAsUser/NonRoot
      # securityContext:
      #   runAsNonRoot: true
      volumes:
        - name: dump-storage
          persistentVolumeClaim:
            claimName: dotnet-memory-leak-dumps
        - name: diag-socket # Define the shared volume
          emptyDir: {}
      containers:
        - name: dotnet-app
          image: quay.io/rhn_support_arolivei/dotnet-memory-leak-app:v1
          command: ["/bin/sh", "-c"]
          args:
            - mkdir -p /app/dumps/tmp && chmod 777 /app/dumps/tmp && exec dotnet /app/DotNetMemoryLeakApp.dll
          ports:
            - containerPort: 8881
          volumeMounts:
            - mountPath: /app/dumps
              name: dump-storage
            - name: diag-socket # Mount the shared volume
              mountPath: /tmp
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "2"
              memory: "2Gi"
        - name: diagnostic-tools-sidecar
          image: quay.io/rhn_support_arolivei/dotnet-memory-leak-app:v1
          command: ["/bin/sh", "-c"]
          args:
            - mkdir -p /app/dumps/tmp && chmod 777 /app/dumps/tmp && exec sleep infinity
          volumeMounts:
            - mountPath: /app/dumps
              name: dump-storage
          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
