kubernetes/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: dotnet-memory-leak-service
  namespace: dotnet-memory-leak-app
spec:
  selector:
    app: dotnet-memory-leak-app
  ports:
    - protocol: TCP
      port: 8881
      targetPort: 8881
  type: ClusterIP
